# lpnu_cad_course

./: .gitignore  .gitmodules  bibliography.bib
2-сем/AlgoProgr/: algo.cpp  decypher.md  fibonacci.md  machines.md  trees.md
2-сем/AlgoProgr/лаби/: Емулятори_лаб_1_3.rar
2-сем/Circuitry/_notes/: _index.md  chipset.md  counters.md  lect3.md  lect4.md  lect5.md  memory.md  notes.md  prospects.md  shortcuts.md  sum.md  дешифратори.md
2-сем/Circuitry/_rgr/: 2x1.dxf  2x1.dxf~  my.md
2-сем/Circuitry/misc/: укладачі
2-сем/Circuitry/ргр/: mans.md  my.md
2-сем/English/: 2.12.md  2.15.md  complex.md  engineering.md  english.md  oiqwur.md  unieng
2-сем/English/book_tasks/: 1.55.md  Miliukhin_PP-14_1.1.md  Miliukhin_PP-14_1.10.md  Miliukhin_PP-14_1.12.md  Miliukhin_PP-14_1.13.md  Miliukhin_PP-14_1.14.md  Miliukhin_PP-14_1.15.md  Miliukhin_PP-14_1.16.md  Miliukhin_PP-14_1.17.md  Miliukhin_PP-14_1.25.md  Miliukhin_PP-14_1.28.md  Miliukhin_PP-14_1.35.md  Miliukhin_PP-14_1.38.md  Miliukhin_PP-14_1.39.md  Miliukhin_PP-14_1.41.md  (+9 more)
2-сем/Math_analysis/: bruh.md
2-сем/OOP/_lab/_lab_8/src/: CMakeLists.txt  gtk_meow.glade~  main.cc
2-сем/OOP/_lab/_lab_8/src/.cache/clangd/index/: main.cc.CA078350E9A9081E.idx  my_math.cpp.D05FC9C76DAC776C.idx  mymath.h.DDE0C3740DA6CABE.idx  window.cc.84A3307DB4183993.idx
2-сем/OOP/_lab/_lab_8/src/Debug/: CMakeCache.txt  cmake_install.cmake  compile_commands.json
2-сем/OOP/_lab/_lab_8/src/Debug/.cmake/api/v1/reply/: index-2023-05-21T19-43-58-0484.json  target-test_app-Debug-021307ca80dd914311a8.json
2-сем/OOP/_lab/lab-5/task2/src/: CMakeLists.txt  main.cpp  storage  sweet_roll.cpp  ware.cpp
2-сем/OOP/_lab/lab-5/task2/src/.cache/clangd/index/: main.cpp.9CEC6881934C2B6C.idx  sweet_roll.cpp.01089674FB59D10F.idx  ware.cpp.CFFF7A00E9DC7CAC.idx
2-сем/OOP/_lab/lab-5/task2/src/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  storage  test
2-сем/OOP/_lab/lab-5/task2/src/Debug/.cmake/api/v1/reply/: codemodel-v2-ad5b7e0bed166e9cc080.json  index-2023-04-26T17-30-13-0786.json  target-test-Debug-d8636f3102b9569a387c.json
2-сем/Ukr/: accent.md  consp.md  derivatives.md  notes.md  noun.md  phraseology.md  slovotvir.md  verb.md
(+536 files in other folders)
